--- a/src/server/client/index.html
+++ b/src/server/client/index.html
@@ -15,6 +15,17 @@
         width: 100vw;
       }
 
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-size: 1.5rem;
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      h1 {
+        font-size: 3rem;
+      }
+
       .buttons {
         display: flex;
         align-items: center;
@@ -24,8 +35,8 @@
 
       .buttons button {
         margin: 10px;
-        width: 100px;
-        height: 100px;
+        width: 200px;
+        height: 200px;
         border: 0;
         border-radius: 10px;
         background-color: #f1f1f1;
@@ -47,9 +58,8 @@
       }
       .distanceWrapper input {
         margin-right: 10px;
-        width: 250px;
+        /* width: 550px; */
         height: 50px;
-        font-size: 20px;
         border: 0;
         border-radius: 10px;
         background-color: #f1f1f1;
@@ -62,7 +72,8 @@
 
       .distanceWrapper button {
         margin: 10px;
-        width: 100px;
+        /* width: 200px; */
+        padding-inline: 20px;
         height: 50px;
         border: 0;
         border-radius: 10px;
@@ -100,7 +111,7 @@
       const saveReadingsButton = document.getElementById("saveReadings");
       const setDistanceButton = document.getElementById("setDistance");
 
-      const host = "http://192.168.2.101:8000";
+      const host = "";
 
       const startRecording = () => {
         fetch(host + "/start-recording", {
